--- a/tests/org.eclipse.e4.ui.tests/build.properties
+++ b/tests/org.eclipse.e4.ui.tests/build.properties
@@ -1,7 +1,6 @@
 source.. = src/
 output.. = bin/
-bin.includes = plugin.xml,\
-               META-INF/,\
+bin.includes = META-INF/,\
                .,\
-               html/,\
-               *.xml
+               *.xml,\
+               xmi/
